# mle-core-dwp

./: .appveyor.yml  .gitignore  README.md
DigitalWorkprint/lib/common/doc/: MleDoxyfile  MleDoxyfile.linux  README.txt  mainpage.dox  mainpage.md  wzFooter.html  wzHeader.html
DigitalWorkprint/lib/common/include/mle/: Dwp.h  DwpActor.h  DwpActorDef.h  DwpActorSet.h  DwpActorTemplate.h  DwpArray.h  DwpBoot.h  DwpCast.h  DwpCastRef.h  DwpChecker.h  DwpCommonDefs.h  DwpCommonTypes.h  DwpContainer.h  DwpConverter.h  DwpDSOFile.h  DwpDataUnion.h  DwpDatatype.h  DwpDelegateAttachment.h  DwpDelegateBinding.h  DwpDelegateDef.h  DwpDelegateForumMapping.h  DwpDict.h  DwpDiscriminator.h  DwpEnum.h  DwpEnumDef.h  DwpFile.h  DwpFilename.h  DwpFiletype.h  DwpFinder.h  DwpFloat.h  DwpFloat3.h  DwpFloat4.h  DwpFloatArray.h  DwpForum.h  DwpForumDef.h  DwpGroup.h  DwpGroupRef.h  DwpHeaderFile.h  DwpInclude.h  DwpInput.h  (+42 more)
DigitalWorkprint/lib/common/src/DWP/: Dwp.cpp
DigitalWorkprint/lib/common/src/DWPBase/: DwpContainer.cpp  DwpDSOFile.cpp  DwpDict.cpp  DwpDiscriminator.cpp  DwpFile.cpp  DwpFilename.cpp  DwpFinder.cpp  DwpInclude.cpp  DwpInput.cpp  DwpItem.cpp  DwpLoad.cpp  DwpMonitor.cpp  DwpNotifier.cpp  DwpOutput.cpp  DwpStrKeyDict.cpp  DwpTagAllDiscriminator.cpp  DwpTagDiscriminator.cpp  DwpUnknown.cpp
DigitalWorkprint/lib/common/src/DWPModel/: DwpActor.cpp  DwpActorDef.cpp  DwpActorSet.cpp  DwpActorTemplate.cpp  DwpBoot.cpp  DwpCast.cpp  DwpCastRef.cpp  DwpChecker.cpp  DwpConverter.cpp  DwpDelegateAttachment.cpp  DwpDelegateBinding.cpp  DwpDelegateDef.cpp  DwpDelegateForumMapping.cpp  DwpFiletype.cpp  DwpForum.cpp  DwpForumDef.cpp  DwpGroup.cpp  DwpGroupRef.cpp  DwpHeaderFile.cpp  DwpLimits.cpp  DwpMedia.cpp  DwpMediaRef.cpp  DwpMediaRefClass.cpp  DwpMediaRefSource.cpp  DwpMediaRefTarget.cpp  DwpPackage.cpp  DwpProperty.cpp  DwpPropertyDef.cpp  DwpRoleAttachment.cpp  DwpRoleBinding.cpp  DwpRoleDef.cpp  DwpRoleSetMapping.cpp  DwpScene.cpp  DwpSet.cpp  DwpSetDef.cpp  DwpSourceFile.cpp  DwpStage.cpp  DwpStageDef.cpp
DigitalWorkprint/lib/common/src/DWPType/: DwpArray.cpp  DwpDataUnion.cpp  DwpDatatype.cpp  DwpEnum.cpp  DwpEnumDef.cpp  DwpFloat.cpp  DwpFloat3.cpp  DwpFloat4.cpp  DwpFloatArray.cpp  DwpInt.cpp  DwpIntArray.cpp  DwpMatrix34.cpp  DwpRotation.cpp  DwpScalar.cpp  DwpScalarArray.cpp  DwpString.cpp  DwpTransform.cpp  DwpVector2.cpp  DwpVector3.cpp  DwpVector3Array.cpp  DwpVector4.cpp  DwpVoidStarType.cpp
DigitalWorkprint/lib/common/test/: dwpCheckerTest.cpp  intest.cpp
DigitalWorkprint/lib/linux/: .autotools  .cproject  .project  CMakeLists.txt  Makefile.am  NEWS  README  configure.ac
DigitalWorkprint/lib/linux/DwpChecker/: CMakeLists.txt  Makefile.am
DigitalWorkprint/lib/linux/exampleProgram/: HelloWorld.dwp  Makefile.am  exampleProgram.cpp
DigitalWorkprint/lib/linux/include/: Makefile.am  libDWP.h
DigitalWorkprint/lib/linux/include/mle/: DwpPlatformDefs.h  DwpPlatformTypes.h
DigitalWorkprint/lib/linux/libDWP/: CMakeLists.txt  Makefile.am
DigitalWorkprint/lib/linux/libDWP/cmake/: FindMLMATH.cmake
DigitalWorkprint/lib/mac/include/mle/: DwpPlatformDefs.h  DwpPlatformTypes.h
DigitalWorkprint/lib/qt/DWP/: DWP.pro
DigitalWorkprint/lib/qt/DwpChecker/: DwpChecker.pro
DigitalWorkprint/lib/win32/: ismdefs
DigitalWorkprint/lib/win32/include/: Makefile
DigitalWorkprint/lib/win32/include/mle/: DwpPlatformDefs.h  DwpPlatformTypes.h
DigitalWorkprint/lib/win32/src/: Makefile
DigitalWorkprint/lib/win32/src/DWP/: Makefile  leafdefs
DigitalWorkprint/lib/win32/src/DWP/Debug/: Makefile  localdefs
DigitalWorkprint/lib/win32/src/DWP/Release/: Makefile  localdefs
DigitalWorkprint/lib/win32/src/DWPBase/: Makefile  leafdefs
DigitalWorkprint/lib/win32/src/DWPBase/Debug/: Makefile  localdefs
DigitalWorkprint/lib/win32/src/DWPBase/Release/: Makefile  localdefs
DigitalWorkprint/lib/win32/src/DWPModel/: Makefile  leafdefs
DigitalWorkprint/lib/win32/src/DWPModel/Debug/: Makefile  localdefs
DigitalWorkprint/lib/win32/src/DWPModel/Release/: Makefile  localdefs
DigitalWorkprint/lib/win32/src/DWPType/: Makefile  leafdefs
DigitalWorkprint/lib/win32/src/DWPType/Debug/: Makefile  localdefs
DigitalWorkprint/lib/win32/src/DWPType/Release/: Makefile  localdefs
DigitalWorkprint/lib/win32/src/DwpChecker/: Makefile  leafdefs
DigitalWorkprint/lib/win32/src/DwpChecker/Debug/: Makefile  localdefs
DigitalWorkprint/lib/win32/src/DwpChecker/Release/: Makefile  localdefs
DigitalWorkprint/lib/win32/src/DwpDso/: DwpDso.cpp  DwpDso.h  Makefile  ReadMe.txt  StdAfx.cpp  StdAfx.h  leafdefs
DigitalWorkprint/lib/win32/src/DwpDso/Debug/: Makefile  localdefs
DigitalWorkprint/lib/win32/src/DwpDso/Release/: Makefile  localdefs
DigitalWorkprint/lib/win32/src/InUnitTest/: Mle3dCameraActor.wpd  Mle3dForum.wpf  MleEscapeActor.wpd  MySpinnerActor.wpd  asdf.wp  test.dwp
DigitalWorkprint/test/linux/libDWP-test/: .autotools  .cproject  .project  Makefile.am  NEWS  README  configure.ac
DigitalWorkprint/test/linux/libDWP-test/exampleProgram/: Makefile.am  exampleProgram.cxx
DigitalWorkprint/test/linux/libDWP-test/include/: Makefile.am  libdwptest.h
DigitalWorkprint/test/linux/libDWP-test/libdwptest/: Makefile.am  libdwptest.cxx  testFloat.cxx  testFloatArray.cxx  testInt.cxx  testMlVector2.cxx  testMlVector3.cxx  testMlVector4.cxx  testString.cxx
DigitalWorkprint/test/linux/libDWP-test/workprints/: TestDWPProperties.dwp
DigitalWorkprint/xml/: DigitalWorkprint.spp  DigitalWorkprint.xsd  HelloWorld.xml  ImageViewer.xml  Simple.xml
