# These files will end up in the install include directory
# For example, /usr/include
includedir = $(prefix)/include/mle

include_HEADERS = \
	mle/DwpPlatformDefs.h \
	mle/DwpPlatformTypes.h \
	$(top_srcdir)/../common/include/mle/Dwp.h \
	$(top_srcdir)/../common/include/mle/DwpActor.h \
	$(top_srcdir)/../common/include/mle/DwpActorDef.h \
	$(top_srcdir)/../common/include/mle/DwpActorSet.h \
	$(top_srcdir)/../common/include/mle/DwpActorTemplate.h \
	$(top_srcdir)/../common/include/mle/DwpArray.h \
	$(top_srcdir)/../common/include/mle/DwpBoot.h \
	$(top_srcdir)/../common/include/mle/DwpCast.h \
	$(top_srcdir)/../common/include/mle/DwpCastRef.h \
	$(top_srcdir)/../common/include/mle/DwpChecker.h \
	$(top_srcdir)/../common/include/mle/DwpCommonDefs.h \
	$(top_srcdir)/../common/include/mle/DwpCommonTypes.h \
	$(top_srcdir)/../common/include/mle/DwpContainer.h \
	$(top_srcdir)/../common/include/mle/DwpConverter.h \
	$(top_srcdir)/../common/include/mle/DwpDatatype.h \
	$(top_srcdir)/../common/include/mle/DwpDataUnion.h \
	$(top_srcdir)/../common/include/mle/DwpDelegateAttachment.h \
	$(top_srcdir)/../common/include/mle/DwpDelegateBinding.h \
	$(top_srcdir)/../common/include/mle/DwpDelegateDef.h \
	$(top_srcdir)/../common/include/mle/DwpDelegateForumMapping.h \
	$(top_srcdir)/../common/include/mle/DwpDict.h \
	$(top_srcdir)/../common/include/mle/DwpDiscriminator.h \
	$(top_srcdir)/../common/include/mle/DwpDSOFile.h \
	$(top_srcdir)/../common/include/mle/DwpEnumDef.h \
	$(top_srcdir)/../common/include/mle/DwpEnum.h \
	$(top_srcdir)/../common/include/mle/DwpFile.h \
	$(top_srcdir)/../common/include/mle/DwpFilename.h \
	$(top_srcdir)/../common/include/mle/DwpFiletype.h \
	$(top_srcdir)/../common/include/mle/DwpFinder.h \
	$(top_srcdir)/../common/include/mle/DwpFloat.h \
	$(top_srcdir)/../common/include/mle/DwpFloat3.h \
	$(top_srcdir)/../common/include/mle/DwpFloat4.h \
	$(top_srcdir)/../common/include/mle/DwpFloatArray.h \
	$(top_srcdir)/../common/include/mle/DwpForumDef.h \
	$(top_srcdir)/../common/include/mle/DwpForum.h \
	$(top_srcdir)/../common/include/mle/DwpGroup.h \
	$(top_srcdir)/../common/include/mle/DwpGroupRef.h \
	$(top_srcdir)/../common/include/mle/DwpHeaderFile.h \
	$(top_srcdir)/../common/include/mle/DwpInclude.h \
	$(top_srcdir)/../common/include/mle/DwpInput.h \
	$(top_srcdir)/../common/include/mle/DwpIntArray.h \
	$(top_srcdir)/../common/include/mle/DwpInt.h \
	$(top_srcdir)/../common/include/mle/DwpItem.h \
	$(top_srcdir)/../common/include/mle/DwpLimits.h \
	$(top_srcdir)/../common/include/mle/DwpMatrix34.h \
	$(top_srcdir)/../common/include/mle/DwpMedia.h \
	$(top_srcdir)/../common/include/mle/DwpMediaRefClass.h \
	$(top_srcdir)/../common/include/mle/DwpMediaRef.h \
	$(top_srcdir)/../common/include/mle/DwpMediaRefSource.h \
	$(top_srcdir)/../common/include/mle/DwpMediaRefTarget.h \
	$(top_srcdir)/../common/include/mle/DwpMonitor.h \
	$(top_srcdir)/../common/include/mle/DwpNotifier.h \
	$(top_srcdir)/../common/include/mle/DwpOutput.h \
	$(top_srcdir)/../common/include/mle/DwpPackage.h \
	$(top_srcdir)/../common/include/mle/DwpPropertyDef.h \
	$(top_srcdir)/../common/include/mle/DwpProperty.h \
	$(top_srcdir)/../common/include/mle/DwpRoleAttachment.h \
	$(top_srcdir)/../common/include/mle/DwpRoleBinding.h \
	$(top_srcdir)/../common/include/mle/DwpRoleDef.h \
	$(top_srcdir)/../common/include/mle/DwpRoleSetMapping.h \
	$(top_srcdir)/../common/include/mle/DwpRotation.h \
	$(top_srcdir)/../common/include/mle/DwpScalarArray.h \
	$(top_srcdir)/../common/include/mle/DwpScalar.h \
	$(top_srcdir)/../common/include/mle/DwpScene.h \
	$(top_srcdir)/../common/include/mle/DwpSet.h \
	$(top_srcdir)/../common/include/mle/DwpSetDef.h \
	$(top_srcdir)/../common/include/mle/DwpSourceFile.h \
	$(top_srcdir)/../common/include/mle/DwpStageDef.h \
	$(top_srcdir)/../common/include/mle/DwpStage.h \
	$(top_srcdir)/../common/include/mle/DwpString.h \
	$(top_srcdir)/../common/include/mle/DwpStrKeyDict.h \
	$(top_srcdir)/../common/include/mle/DwpTagAllDiscriminator.h \
	$(top_srcdir)/../common/include/mle/DwpTagDiscriminator.h \
	$(top_srcdir)/../common/include/mle/DwpTblMgr.h \
	$(top_srcdir)/../common/include/mle/DwpTransform.h \
	$(top_srcdir)/../common/include/mle/DwpUnknown.h \
	$(top_srcdir)/../common/include/mle/DwpVector2.h \
	$(top_srcdir)/../common/include/mle/DwpVector3Array.h \
	$(top_srcdir)/../common/include/mle/DwpVector3.h \
	$(top_srcdir)/../common/include/mle/DwpVector4.h \
	$(top_srcdir)/../common/include/mle/DwpVoidStarType.h \
	$(top_srcdir)/../../../Core/util/linux/include/mle/MleLinuxPath.h \
	$(top_srcdir)/../../../Core/util/linux/include/mle/mlPlatformDefs.h \
	$(top_srcdir)/../../../Core/util/common/include/mle/mle.h \
	$(top_srcdir)/../../../Core/util/common/include/mle/mlArray.h \
	$(top_srcdir)/../../../Core/util/common/include/mle/mlAssert.h \
	$(top_srcdir)/../../../Core/util/common/include/mle/mlConfig.h \
	$(top_srcdir)/../../../Core/util/common/include/mle/mlDebug.h \
	$(top_srcdir)/../../../Core/util/common/include/mle/MleDsoLoader.h \
	$(top_srcdir)/../../../Core/util/common/include/mle/MleMemoryManager.h \
	$(top_srcdir)/../../../Core/util/common/include/mle/MlePath.h \
	$(top_srcdir)/../../../Core/util/common/include/mle/mlErrno.h \
	$(top_srcdir)/../../../Core/util/common/include/mle/MleTemplate.h \
	$(top_srcdir)/../../../Core/util/common/include/mle/mlExpandFilename.h \
	$(top_srcdir)/../../../Core/util/common/include/mle/mlFileio.h \
	$(top_srcdir)/../../../Core/util/common/include/mle/mlLogFile.h \
	$(top_srcdir)/../../../Core/util/common/include/mle/mlMacros.h \
	$(top_srcdir)/../../../Core/util/common/include/mle/mlMalloc.h \
	$(top_srcdir)/../../../Core/util/common/include/mle/mlToken.h \
	$(top_srcdir)/../../../Core/util/common/include/mle/mlTypes.h \
	$(top_srcdir)/../../../Core/util/common/include/mle/mlUnique.h